# unitree_rl_mjlab

./: .gitignore  README.md  README_zh.md  setup.py
deploy/robots/go2_camera/: CMakeLists.txt  README.md  camera_viewer.cpp  main.cpp
deploy/robots/go2_camera/config/: config.yaml
deploy/robots/go2_camera/config/policy/velocity_camera/v0/params/: deploy.yaml
deploy/robots/go2_camera/include/: RealSenseSource.h
deploy/robots/go2_camera/src/: RealSenseSource.cpp  State_RLBase.cpp
scripts/: checkpoint_compat.py  empty_env_test.py  list_envs.py  local_tasks.py  main.py  play.py  realsense.py  train.py  train_leap.py  train_off_policy.py  train_ppo.py  view_jump_env.py  view_leap_env.py
src/rl_core/flash_rl/: evaluation.py  types.py
src/rl_core/flash_rl/agents/: __init__.py  base_agent.py  random_agent.py
src/rl_core/flash_rl/buffers/: __init__.py  base_buffer.py  numpy_buffer.py  torch_buffer.py  utils.py
src/rl_core/flash_rl/common/: config.py  logger.py
src/rl_core/flash_rl/envs/: mjlab.py
src/rl_core/rsl_rl/algorithms/: __init__.py  distillation.py  metra.py  ppo.py
src/rl_core/rsl_rl/extensions/: rnd.py  symmetry.py
src/rl_core/rsl_rl/models/: cnn_model.py  mlp_model.py  rnn_model.py
src/rl_core/rsl_rl/modules/: cnn.py  mlp.py  rnn.py
src/rl_core/rsl_rl/rl/: config.py  exporter_utils.py  runner.py  vecenv_wrapper.py
src/rl_core/rsl_rl/runners/: __init__.py  distillation_runner.py  metra_runner.py  on_policy_runner.py
src/rl_core/rsl_rl/storage/: rollout_storage.py
src/rl_core/rsl_rl/utils/: logger.py  wandb_utils.py
src/tasks/: __init__.py  register_local.py
src/tasks/empty/: __init__.py  empty_env_cfg.py
src/tasks/empty/config/: __init__.py
src/tasks/empty/mdp/: __init__.py
src/tasks/jump/: __init__.py  jump_env_cfg.py
src/tasks/jump/mdp/: __init__.py  observations.py  rewards.py  terminations.py
src/tasks/leap/: __init__.py
src/tasks/leap/config/: __init__.py
src/tasks/tracking/: tracking_env_cfg.py
src/tasks/velocity/: velocity_env_cfg.py
(+28 files in other folders)
